--- a/libraries/Update/library.properties
+++ b/libraries/Update/library.properties
@@ -3,7 +3,7 @@ version=2.0.0
 author=Hristo Gochkov
 maintainer=Hristo Gochkov <hristo@espressif.com>
 sentence=ESP32 Sketch Update Library
-paragraph=
+paragraph=Quick clone of Arduino ESP8266httpUpdate for ESP32 (without HTTPS requirement)
 category=Other
-url=
+url=https://github.com/discover1977/arduino-esp32/edit/master/libraries/Update
 architectures=esp32
